# Intro_FEM

./: .dockerignore  .gitignore  COURSE_INTEGRATION_NOTES.md  CREATION_SUMMARY.txt  Dockerfile  Makefile  README.md  SYLLABUS_REVISION_DRAFT.md  SymbolicFemWorkbenchDocs.html  SymbolicFemWorkbenchDocs.jsx  TEACHING_NOTE_MANUAL_ASSEMBLY_2D.md  WORKBENCH_INTEGRATION_PLAN.md  ch01-introduction.html  ch02-algebraic-system.html  ch03-function-spaces.html  ch04-1d-fem.html  ch05-time-dependent.html  ch06-math-prelim-2d3d.html  ch07-b-matrix.html  ch08-heat-transfer-2d.html  ch09-continuum-mechanics.html  ch10-elasticity-3d.html  ch11-fem-implementation.html  ch12-error-estimates.html  ch14-fenicsx.html  ch15-beams-theory.html  ch16-beams-fenicsx.html  custom.css  environment.yml  index.html  pyproject.toml  search.json  streamlit_app.py
apps/: presets.py  workbench_app.py
book/: Makefile  _common.py  _quarto.yml  ch01-introduction.qmd  ch02-algebraic-system.qmd  ch03-function-spaces.qmd  ch04-1d-fem.qmd  ch05-time-dependent.qmd  ch06-math-prelim-2d3d.qmd  ch07-b-matrix.qmd  ch08-heat-transfer-2d.qmd  ch10-elasticity-3d.qmd  ch11-fem-implementation.qmd  ch12-error-estimates.qmd  ch14-fenicsx.qmd  ch15-beams-theory.qmd  ch16-beams-fenicsx.qmd  course_deck.qmd  gen_slides.py  index.qmd
dev/: streamlit_guide.md
docs/: API_REFERENCE.md  BUILD_VERIFICATION.md  COVERAGE_GAP_ANALYSIS.md  GETTING_STARTED.md  _quarto.yml  getting-started.html  getting-started.qmd  index.html  index.qmd  search.json
examples/: bar_1d_workflow.py  manual_assembly_square_4tri.py  (+2 more)
old/: L1.py  L2.py  (+1 more)
(+147 files in other folders)
