[project]
name = "symbolic-fem-workbench"
version = "0.1.0"
description = "Teaching-first symbolic finite element workbench built on SymPy"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Shmuel Osovski" }
]
dependencies = [
  "sympy>=1.13",
  "numpy>=1.26",
  "matplotlib>=3.8",
  "scipy>=1.12",
]

[project.optional-dependencies]
lectures = [
  "jupyter>=1.0",
  "ipywidgets>=8.0",
  "ipykernel>=6.29",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.11",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/symbolic_fem_workbench"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "mypy>=1.11",
]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

